work in progress.

--- a/contract-renewal/assets/css/styles.css
+++ b/contract-renewal/assets/css/styles.css
@@ -175,3 +175,10 @@ tr.modified-item {
 .form-group .league-dropdown{
     height: 88px;
 }
+
+
+
+/*.jsgrid-grid-header {*/
+    /*overflow-x: visible;*/
+    /*overflow-y: visible;*/
+/*}*/
