--- a/contract-renewal/assets/css/styles.css
+++ b/contract-renewal/assets/css/styles.css
@@ -340,6 +340,12 @@ textarea:disabled,
 }
 
 
+.input-group > .input-group-addon-transparent {
+    background-color: transparent;
+    border-width: 0;
+    padding-right: 0;
+}
+
 
 
 .uir-list-export-csv {
