--- a/contract-renewal/assets/css/styles.css
+++ b/contract-renewal/assets/css/styles.css
@@ -253,12 +253,12 @@ input[type="text"],
 input[type="password"],
 select,
 textarea {
-    padding: 3px !important;
+    padding: 0px 3px !important;
 }
 
 .form-control {
     height: 24px;
-    line-height: 24px !important;
+    line-height: 22px !important;
     font-size: 12px;
     border-radius: 0;
 }
