Changes said by customer:
iv) View Quote button to be provided on Sales Rep dashboard - DONE

vii) customer should have option to edit notifications - DONE

viii) user event to redirect user to new contract page. - DONE

x) added a checkbox for Quote Approval notification in Notification section of Create / Edit Contract screen. - DONE

--- a/contract-renewal/assets/css/styles.css
+++ b/contract-renewal/assets/css/styles.css
@@ -56,11 +56,11 @@ tr.modified-item {
 
 /*
 ----------------------------------------
-Approve Contract Page Classes :: START afafadfa dfhladhlfhakjfhka
+Approve Contract Page Classes :: START afadfa dfdaf adfad
 */
 
 .action-buttons .btn + .btn {
-    margin-top: 4px;
+    margin-left: 4px;
 }
 
 
