fixed an issue with contract number field.

--- a/contract-renewal/assets/css/styles.css
+++ b/contract-renewal/assets/css/styles.css
@@ -369,6 +369,9 @@ textarea:disabled,
     height: auto;
 }
 
+.contract-number {
+    word-wrap: break-word;
+}
 
 .contracts-listing-page .toolbar {
     background-color: #E0E6EF;
